--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -1,49 +1,149 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".History"
-    android:orientation="vertical"
-    android:weightSum="5">
+    android:background="@drawable/gradient"
+    tools:context=".History">
 
-    <com.google.android.material.appbar.AppBarLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay"
-        android:layout_weight="1">
+        android:id="@+id/toolbar_workout"
+        android:layout_height="@dimen/toolbar"
+        android:orientation="horizontal"
+        android:layout_marginBottom="@dimen/new_margin">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+        <ImageView
+            android:id="@+id/back_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/abc_vector_test"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:onClick="goBack"
+            android:contentDescription="@string/back_text"/>
 
-    </com.google.android.material.appbar.AppBarLayout>
+        <TextView
+            android:id="@+id/create_toolbar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="2"
+            android:text="@string/history_title"
+            android:textStyle="bold"
+            android:textSize="@dimen/header_text"/>
 
-    <com.github.mikephil.charting.charts.BarChart
-        android:id="@+id/barChart"
+        <TextView
+            android:id="@+id/profile_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/profile_text"
+            android:layout_gravity="center"
+            android:textStyle="bold"
+            android:textSize="@dimen/header_text"
+            android:clickable="true"
+            android:focusable="true"
+            android:onClick="goProfile"/>
+
+        <ImageView
+            android:id="@+id/profile_image"
+            android:layout_width="@dimen/header_text"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/common_google_signin_btn_icon_disabled"
+            android:clickable="true"
+            android:focusable="true"
+            android:contentDescription="@string/profile_text"
+            android:onClick="goProfile"/>
+
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="15"/>
+        android:layout_below="@id/toolbar_workout"
+        android:orientation="vertical"
+        android:paddingHorizontal="@dimen/margin2"
+        android:weightSum="9">
+        <com.github.mikephil.charting.charts.BarChart
+            android:id="@+id/barChart"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="16"
+            android:layout_marginBottom="@dimen/side_margin"/>
+        <TextView
+            android:id="@+id/day"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/today"
+            android:textSize="@dimen/normal_text"
+            android:layout_marginBottom="@dimen/new_margin"
+            android:paddingHorizontal="@dimen/side_margin"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/new_margin"
+            android:orientation="horizontal"
+            android:paddingHorizontal="@dimen/side_margin">
+            <TextView
+                android:id="@+id/km"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="@string/walked"
+                android:textSize="@dimen/header_text"
+                android:layout_marginRight="@dimen/new_margin"/>
+            <TextView
+                android:id="@+id/num1"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="end"
+                android:text="15"
+                android:textSize="@dimen/header_text"/>
+            <TextView
+                android:id="@+id/kilometer"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="@string/km"
+                android:textSize="@dimen/header_text"
+                android:layout_marginLeft="@dimen/new_margin"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/side_margin"
+            android:orientation="horizontal"
+            android:paddingHorizontal="@dimen/side_margin">
+            <TextView
+                android:id="@+id/inactivity"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="@string/inactivity"
+                android:textSize="@dimen/header_text"
+                android:layout_marginRight="@dimen/new_margin"/>
+            <TextView
+                android:id="@+id/num2"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="end"
+                android:text="1"
+                android:textSize="@dimen/header_text"/>
+            <TextView
+                android:id="@+id/hours"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="@string/h"
+                android:textSize="@dimen/header_text"
+                android:layout_marginLeft="@dimen/new_margin"/>
+        </LinearLayout>
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/day"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Hoy"/>
-    <TextView
-        android:id="@+id/Km"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Has caminado:"/>
-    <TextView
-        android:id="@+id/km"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="$km"/>
+    <!--
+
+
+
     <TextView
         android:id="@+id/inactive"
         android:layout_width="match_parent"
@@ -54,5 +154,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="$time"/>
-
-</androidx.appcompat.widget.LinearLayoutCompat>
+-->
+</RelativeLayout>
