--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -1,9 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Inicio"
     android:background="@drawable/gradient">
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:orientation="vertical">
+        <Button
+            android:id="@+id/history"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="history"
+            android:text="History"
+            android:textSize="@dimen/header_text"
+            android:padding="@dimen/margin2"/>
+        <Button
+            android:id="@+id/workouts"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="workouts"
+            android:text="Workouts"
+            android:textSize="@dimen/header_text"
+            android:padding="@dimen/margin2"/>
+
+
+    </LinearLayout>
+</RelativeLayout>
