--- a/app/src/main/res/layout/activity_diet_home.xml
+++ b/app/src/main/res/layout/activity_diet_home.xml
@@ -69,158 +69,10 @@
         android:paddingBottom="@dimen/top_margin">
 
         <LinearLayout
+            android:id="@+id/layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
-            <!-- Breakfast -->
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:paddingHorizontal="@dimen/margin2"
-                android:layout_marginBottom="@dimen/top_margin">
-
-                <ImageView
-                    android:id="@+id/exercise1"
-                    android:layout_width="125dp"
-                    android:layout_height="125dp"
-                    android:contentDescription="Image"
-                    android:onClick="showLink"
-                    app:srcCompat="@drawable/common_google_signin_btn_icon_light" />
-
-                <TextView
-                    android:id="@+id/exercise1title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/header_text"
-                    android:layout_toRightOf="@id/exercise1"
-                    android:text="@string/breakfast"
-                    android:textSize="@dimen/normal_text" />
-
-                <TextView
-                    android:id="@+id/reps1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/exercise1title"
-                    android:layout_marginLeft="@dimen/header_text"
-                    android:layout_toRightOf="@id/exercise1"
-                    android:text="@string/meal1"
-                    android:textSize="@dimen/header_text" />
-
-                <TextView
-                    android:id="@+id/sets1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/reps1"
-                    android:layout_marginLeft="@dimen/header_text"
-                    android:layout_toRightOf="@id/exercise1"
-                    android:text="@string/meal2"
-                    android:textSize="@dimen/header_text" />
-            </RelativeLayout>
-
-            <!-- Lunch -->
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:paddingHorizontal="@dimen/margin2"
-                android:layout_marginBottom="@dimen/top_margin">
-
-                <ImageView
-                    android:id="@+id/exercise2"
-                    android:layout_width="125dp"
-                    android:layout_height="125dp"
-                    android:contentDescription="Image"
-                    android:onClick="showLink"
-                    app:srcCompat="@drawable/common_google_signin_btn_icon_light" />
-
-                <TextView
-                    android:id="@+id/exercise2title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/header_text"
-                    android:layout_toRightOf="@id/exercise2"
-                    android:text="@string/lunch"
-                    android:textSize="@dimen/normal_text" />
-
-                <TextView
-                    android:id="@+id/reps2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/exercise2title"
-                    android:layout_marginLeft="@dimen/header_text"
-                    android:layout_toRightOf="@id/exercise2"
-                    android:text="@string/meal3"
-                    android:textSize="@dimen/header_text" />
-
-                <TextView
-                    android:id="@+id/sets2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/reps2"
-                    android:layout_marginLeft="@dimen/header_text"
-                    android:layout_toRightOf="@id/exercise2"
-                    android:text="@string/meal4"
-                    android:textSize="@dimen/header_text" />
-
-                <TextView
-                    android:id="@+id/rest2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/sets2"
-                    android:layout_marginLeft="@dimen/header_text"
-                    android:layout_toRightOf="@id/exercise2"
-                    android:text="@string/meal6"
-                    android:textSize="@dimen/header_text" />
-            </RelativeLayout>
-
-            <!-- Dinner -->
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:paddingHorizontal="@dimen/margin2"
-                android:layout_marginBottom="@dimen/top_margin">
-
-                <ImageView
-                    android:id="@+id/exercise3"
-                    android:layout_width="125dp"
-                    android:layout_height="125dp"
-                    android:contentDescription="Image"
-                    android:onClick="showLink"
-                    app:srcCompat="@drawable/common_google_signin_btn_icon_light" />
-
-                <TextView
-                    android:id="@+id/exercise3title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/header_text"
-                    android:layout_toRightOf="@id/exercise3"
-                    android:text="@string/dinner"
-                    android:textSize="@dimen/normal_text" />
-
-                <TextView
-                    android:id="@+id/reps3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/exercise3title"
-                    android:layout_marginLeft="@dimen/header_text"
-                    android:layout_toRightOf="@id/exercise3"
-                    android:text="@string/meal5"
-                    android:textSize="@dimen/header_text" />
-
-                <TextView
-                    android:id="@+id/sets3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/reps3"
-                    android:layout_marginLeft="@dimen/header_text"
-                    android:layout_toRightOf="@id/exercise3"
-                    android:text="@string/meal1"
-                    android:textSize="@dimen/header_text" />
-            </RelativeLayout>
-
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
