--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,7 +12,7 @@
         <item name="colorPrimaryDark">@color/aux2</item>
         <item name="colorAccent">@android:color/holo_green_light</item>
         <item name="colorControlActivated">@color/colorAccent</item>
-        <item name="android:colorBackground">@color/colorBackground</item>
+        <item name="android:colorBackground">@color/transparency_white</item>
         <item name="android:button">@color/transparency_white</item>
         <item name="android:textColor">@color/colorWhite</item>
         <item name="android:textColorHint">@color/hintC</item>
